--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <body>
         <script src="assets/js/jquery-3.3.1.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
+        <input type="text" name="name" id="man">
+        <label for="man">i lke you</label>
+    
     </body>
 </html>
