--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <script src="assets/js/jquery-3.3.1.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <input type="text" name="name" id="man">
-        <label for="man">i lke you</label>
+        <label for="man">I Love you</label>
+        
     
     </body>
 </html>
