second change ma'mm

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="fa">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> user
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Shop</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -12,6 +13,7 @@
         <script src="assets/js/bootstrap.min.js"></script>
         <input type="text" name="name" id="man">
         <label for="man">i lke you</label>
-    
+        <button type="submit">
+       
     </body>
 </html>
