Test From Shahbazikhah

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
         <script src="assets/js/jquery-3.3.1.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <input type="text" name="name" id="man">
-<<<<<<< HEAD
         <label for="man">i love you</label>
-=======
-        <label for="man">I Love you</label>
-        
->>>>>>> 91b0a70eac9e84d4a907bb32468e686887dc1087
-    
+        <a href="#">Google</a>
     </body>
 </html>
