--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <script src="assets/js/bootstrap.min.js"></script>
         <input type="text" name="name" id="man">
         <label for="man">I Love you</label>
-        
-    
+        <h1>hello world!</h1>
+        <h2>hello world!</h2>
+        <h3>hello world!</h3>
+        <h4>hello world!</h4>
+        <h5>hello world!</h5>
+        <h6>hello world!</h6>
     </body>
 </html>
