--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Shop</title>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+        <form id="register" class="text-center" action="" method="post">
         <script src="assets/js/jquery-3.3.1.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <input type="text" name="name" id="man">
-        <label for="man">I Love you</label>
-        
-    
+       <br>
+       <img src="images.png" alt="">
+       <br>
+       <input type="text" name="Username" id="" placeholder="Username">
+       <br>
+       <input type="email" name="Email" id="" placeholder="Email">
+       <br>
+       <input type="password" name="Password" id="" placeholder="Password">
+       <br>
+       <input type="number" name="Username" id="" placeholder="Age">
+       <br>
+        <button type="submit">Submit</button>
+        <br>
+    </form>
     </body>
 </html>
